--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "react-portfolio-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://nithi2218.github.io/react-portfolio-website",
   "dependencies": {
+    "-": "^0.0.1",
     "@headlessui/react": "^1.6.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "gh-pages": "^4.0.0",
     "parcel": "^2.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -15,12 +18,16 @@
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build-css": "tailwindcss build src/index.css -o public/styles.css",
+    "build":"react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
