--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-portfolio-website",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://nithi2218.github.io/react-portfolio-website",
+  "private": true,
+  "homepage": "https://nithi2218.github.io",
   "dependencies": {
     "-": "^0.0.1",
     "@headlessui/react": "^1.6.3",
@@ -23,12 +23,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-css": "tailwindcss build src/index.css -o public/styles.css",
-    "build":"react-scripts build",
+    "build": "tailwindcss build src/components/index.css -o public/styles.css",
     "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
