--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nithi2218.github.io",
+  "homepage": "https://nithi2218.github.io/react-portfolio-website",
   "dependencies": {
     "-": "^0.0.1",
     "@headlessui/react": "^1.6.3",
