--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "homepage": "https://nithi2218.github.io/react-portfolio-website",
   "dependencies": {
-    "-": "^0.0.1",
     "@headlessui/react": "^1.6.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
-    "gh-pages": "^4.0.0",
+    "link-react": "^3.0.0",
     "parcel": "^2.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -18,12 +17,13 @@
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -50,6 +50,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
